@@ -1424,3 +1424,4 @@ Version 14
 		show up again, we may need to test for 1.6 and not do this code only in
 		that case.  Thanks to Amelia Ritahani (ritahani@cs.york.ac.uk).
 	Tweak to MovieEncoder to remove a Java 1.6 deprecated method
+	Updated OvalPortrayal2D to have border paint options just like RectanglePortrayal2D
